<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PrivacyLock</string>
    <string name="app_name_conf">PrivacyLock Configuration</string>
    <string name="unlock">UNLOCK</string>
    <string name="codeAccepted">Code Accepted</string>
    <string name="codeAcceptedNotification">Code Accepted</string>
    <string name="codeSavedNotification">Code Sequence Saved</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>    
    <string name="forgot">Forgot My Code</string>
    
    <string name="undef">Undefined</string>

    <string name="enter_sequence">Enter a key sequence and click save</string>    
    
    <string name="admin">Administration</string>
    <string name="adminRegisterd">Registered As Admin</string>
    <string name="adminRegisterFailed">Failed to register as Admin</string>
    
    <string name="opt_unlock">Unlock Device</string>
    <string name="opt_desc_unlock">Unlocks your device, similar to the standard keyguard; This option must be completed prior to enabling any additional options</string>
    
    <string name="opt_clear_call_log">Clear Call Logs</string>
    <string name="opt_desc_clear_call_log">Deletes all the call log entries</string>
    
    <string name="opt_clear_sms">Clear SMS Messages</string>
    <string name="opt_desc_clear_sms">Attempts to delete all SMS messages on the device; Be aware that this does not work with Hangouts</string>
    
    <string name="opt_clear_camera_roll">Clear Camera Roll</string>
    <string name="opt_desc_clear_camera_roll">Removes all pictures and videos on the device</string>
    
    <string name="opt_send_emergency_sms">Send Emergency SMS</string>
    <string name="opt_desc_send_emergency_sms">Attemps to send an emergency message to the number specified herein</string>
    <string name="smsblurb">Enter emergency number</string>
    <string name="smsNum">Emergency Number</string>    
    <string name="emergencyTemplate">This emergency message has been generated, the sender may be in need of assistance</string>
    <string name="emergencyTemplateLoc">This emergency message has been generated at GPS location: %1$s %2$s, the sender may be in need of assistance</string>
    
    <!-- Failsafe sequence is 13 of the 9 key -->
    <string name="opt_send_new_code">Send New Code</string>
    <string name="opt_desc_send_new_code">Generates a new device unlock code and emails it to you or the email address specified herein</string>
    <string name="emailblurb">Enter destination email</string>    
    <string name="emailAddr">Email Address</string>
    <string name="emailTest">Send Test Email</string>
    <string name="emailTestText">This is a test email</string>    
    
    <string name="opt_wipe">Wipe Device</string>
    <string name="opt_desc_wipe">Be very careful with this option! A device wipe removes all your content and resets the phone back to its original state</string>
    
    <string name="opt_audio_record">Record Audio</string>
    <string name="opt_desc_audio_record">Starts an audio recording</string>
    
    <string name="opt_video_record">Record Video</string>
    <string name="opt_desc_video_record">Starts a video recording</string>
    
    <!-- Settings / configuration -->
    <string name="opt_configuration">Settings</string>
    <string name="opt_desc_configuration">Additional settings</string>
    <string name="configSavedNotification">Settings saved</string>
    
    <string name="conf_trusted_place">Trusted Places</string>
    <string name="conf_desc_trusted_place">A safe environment for your device to auto-unlock</string>
    <string name="conf_trusted_place_toggle">Enable auto-unlock</string>
    <string name="conf_trusted_place_modify">Trusted places</string>
    <string name="add">Add</string>        
    <string name="remove">Remove</string>    
    
    <string name="conf_recording">Recording</string>
    <string name="conf_desc_recording">Length of time to record audio or video</string>
    <string name="conf_record_period">Minutes to record</string>   
    
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>
